--- a/css/contact.css
+++ b/css/contact.css
@@ -1,4 +1,5 @@
 .header-outter{
+    margin-top: 40px;
     background-color: #e2e7ed;
     height: 110px;
 }
@@ -41,6 +42,9 @@ input{
 }
 .cus-map{
     padding-left: 110px;
+}
+iframe{
+    width: 100%;
 }
 .cus-map h4{
     font-size: 30px;
@@ -136,4 +140,13 @@ small{
 	.copyright li{
 		margin-right: 6px;
 	}
+}
+@media only screen and (max-width:320px){
+    .footer-after:after{
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .copyright li a {
+        padding: 0px;
+    }
 }
