--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ table {
 
 
 /*HELPER CLASSES BEGIN*/
+
 .uppercase{
 	text-transform: uppercase;;
 }
@@ -87,58 +88,43 @@ ol li{
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-.cus-top {
-	margin-top: 30px;	
-	height: 120px;
-	
+/*HEADER AREA*/
+nav{
+	margin: 15px 0px;
 }
-.cus-nav span{
-	color: #31333e;
-	font-size: 30px;
-	font-weight: bold;
-	text-transform: uppercase;
+nav span{
 	position: relative;
-	top: -10px;
+	top: 11px;
 	left: 20px;
+	color: #31333e;
+	font-size: 25px;
+	font-weight: bold;
 	font-family: sans-serif;
 }
-.cus-nav span:hover{
-	border-bottom: 0px;
+.cus-nav {
+	display: flex;
+	justify-content: flex-end;
+	margin-right: 60px;
 }
-a:hover{
-	text-decoration: none;
-}
-.navbar-links{
-	margin-top:12px;
-}
-.navbar-links li{
-	display: inline;
-}
-.navbar-links li a{
-	margin-right: 20px;
-	font-weight: 12px;
+.cus-nav ul li a{
+	color: #818181;
+	font-size: 15px;
 	text-transform: uppercase;
-	color: #626262;
+	text-decoration: none;
+	font-family: sans-serif;
 }
-.navbar-links li a:hover{
-	transition: 0.2s;
-	color: #66ceff;
+.cus-nav ul li a:hover{
+	color: #00aeff;
+	font-size: 17px;
+	transition: .3s;
 }
-.after:after{
+.after a:after{
 	content: "";
-	border: 1px solid #555555;
+	border: 1px solid #818181;
 	margin-left: 22px;
+	margin-right: 22px;
 }
-.cus-search{
-	margin: -2px 20px 0 44px;
-}
-.cus-input{
-	background: url(../imgs/search.png) no-repeat 100%;
-	border: 0px;
-	background-color: #f1f3f6;
-	height: 30px;
-	width: 120px;
-}
+/*HEADER ENDS*/
 
 /* MAIN BANNER AREA*/
 .main-banner{
@@ -147,22 +133,17 @@ a:hover{
 	width: 100%;
 	margin-bottom: 80px;
 }
-.banner-h{
-	width: 75%;
-	margin-bottom: 50px;
-}
 .container h1{
-	width: 70%;
 	color: #ffffff;
-	font-size: 50px;
+	font-size: 40px;
+	padding-top: 10px;
 	margin: 70px 0 0 40px;
 	float: left;
 	display: inline;
 	font-family: sans-serif;
 }
 .load-btn{
-	width: 10%;
-	border-radius: 7px ;
+	border-radius: 7px;
 	margin: 73px 0 0 0;
 	background-color: #00aeff;
 	height: 50px;
@@ -170,12 +151,15 @@ a:hover{
 	text-transform: uppercase;
 	color: white;
 	font-family: sans-serif;
+	position: absolute;
 }
+
 .load-btn:hover{
 	background-color: white;
-	color: black;
+	color: red;
 	height: 70px;
 	width: 220px;
+	transition: .3s;
 }
 
 .banner-imgs{
@@ -184,14 +168,14 @@ a:hover{
 }
 .iphone{
 	position: absolute;
-	bottom: -120px;
+	bottom: -125px;
 	left:  200px;
 	z-index: 1;
 }
 .macbook{
 	position: relative;
  	left: 200px;
- 	bottom: -80px;
+ 	bottom: -83px;
 }
 
 /*MAIN BANNER ENDS*/
@@ -199,13 +183,14 @@ a:hover{
 /*DESIGN AREA START*/
 .cus-row{
 	margin-top: 20px;
-	height: 450px;
 }
 .layer-1{
-	width: 33.33%;
 	float: left;
 	text-align: center;
 	padding: 0px 45px;
+}
+.layer-1 p{
+	margin-top: 30px;
 }
 .cus-row h3{
 	font-size: 30px;
@@ -320,185 +305,243 @@ a:hover{
 
 
 /*MEDIA QUERRIES*/
-@media only screen and (max-width: 1024px) {
-	.cus-search{
-		display: none;
+@media only screen and (max-width: 1200px) and (min-width: 1158px){
+	.macbook{
+		bottom: -82px;
 	}
 	.iphone{
-		left:  130px;
-	}
-	.macbook{
-		left: 100px;
-   }
-	.container h1{
-		font-size: 45px;
-	}
-	.eightimages img{
-		width: 200px;
-		height: 150px;
-	}
-	.logo-section img{
-		padding: 0 20px
-	}
-	.cus-images{
-		padding-left: 50px;
+		bottom: -112px;
 	}
 }
-
-@media only screen and (max-width: 980px) {
-	.navbar-links li{
-		margin-right: 0px;
+@media only screen and (max-width: 1160px) and (min-width: 1000px){
+	.macbook{
+		left: 100px;
+		bottom: -82px;
 	}
+	.iphone{
+		left: 85px;
+		bottom: -100px;
 
-	.navbar-links li a{
-		margin-right: 10px;
 	}
-	.after:after{
+	.eightimages :nth-last-child(1){
+		display: none;
+	}
+	.eightimages :nth-last-child(2){
+		display: none;
+	}
+}
+@media only screen and (max-width: 1000px) and (min-width: 889px){
+	.macbook{
+		left: 20px;
+		bottom: -96px;
+	}
+	.iphone{
+		left: 25px;
+   		bottom: -133px;
+	}
+	.after a::after{
+		display: none;
+	}
+	.eightimages :nth-last-child(1){
+		display: inline;
+	}
+	.eightimages :nth-last-child(2){
+		display: inline;
+	}
+	.container h1{
+		font-size: 27px;
+	}
+	.images-div{
+		margin-top: 30px;
+	}
+	.footer-after:after{
+		margin-left: 14px;
+    	margin-right: 15px;
+	}
+	.social-icons {
+		width: 44%;
+	}
+}
+@media only screen and (width:1024px){
+	.macbook{
+		bottom: -82px;
+	}
+	.iphone{
+		bottom: -105px;
+	}
+}
+@media only screen and (max-width: 890px) and (min-width: 769px){
+	.macbook{
+		width: 80%;
+		left: 67px;
+		bottom: -163px;
+	}
+	.iphone{
+		height: 250px;
+		left: 69px;
+		bottom: -192px;
+	}
+	.images-div{
+		margin-top: 80px;
+	}
+	.container h1{
+		font-size: 29px;
+	}
+	.after a::after{
+		display: none;
+	}
+	.footer-after:after{
+		margin-left: 16px;
+    	margin-right: 14px;
+	}
+	.social-icons {
+		width: 44%;
+		margin-left: 5px;
+	}
+	.social-icons img{
+		margin-left:5px;
+	}
+}
+@media only screen and (max-width:768px ){
+	.macbook{
+		width: 80%;
+		bottom: -165px;
+		left: 100px;
+	}
+	.iphone{
+		height: 300px;
+		left: 100px;
+		bottom: -190px;
+	}
+	.container h1{
+		font-size: 27px;
+	}
+	.cus-images{
+		margin-top: 65px;
+	}
+	.copyright{
+		width: 100%;
+	}
+	.social-icons{
+		width: 100%;
+		margin-top: 30px;
+	}
+	.social-icons img{
+		padding: 0px 10px;
+	}
+	.copyright-text{
+		margin-top: 30px;
+	}
+	.after a::after{
+		display: none;
+	}
+}
+@media only screen and (max-width: 767px) and (min-width: 750px){
+	.macbook{
+		bottom: -195px;
+    	left: 20px;
+	}
+	.iphone{
+	height: 250px;
+    left: 17px;
+    bottom: -218px;
+	}
+	.images-div{
+		margin-top:;
+	}
+	.cus-images{
+		text-align: center;
+	}
+	.load-btn{
+		margin: 30px 0px 0px 140px;
+	}
+	.after a::after{
 		display: none;
 	}
 	.container h1{
-		margin-left: 0px;
+		font-size: 33px;
+	}
+}
+@media only screen and (max-width: 750px) and (min-width: 500px){
+	.macbook{
+		bottom: -209px;
+		left: 9px;
 	}
 	.iphone{
-		left:  10px;
+		height: 220px;
+		left: 14px;
+	    bottom: -233px;
 	}
+
+	.load-btn{
+		margin: 30px 0px 0px 140px;
+	}
+	.cus-images{
+		text-align: center;
+	}
+}
+@media only screen and (max-width:425px){
 	.macbook{
-		left: 10px;
-   }
-   .cus-row{
-	   padding:0px;
-	   margin-bottom: 40px;
-   }
-   .eightimages img:nth-last-child(2){
-	   display: none;
-   }
-   .eightimages img:nth-last-child(1){
-	display: none;
+		display: none;
 	}
-	.logo-section img{
-		width: 150px;
+	.iphone{
+		display: none;
 	}
-	.copyright{
-		width: 50%;
+	.main-banner{
+		height: 200px;
+	}
+	.container h1{
+		margin-top: 20px;
+		font-size: 20px;
+	}
+	.load-btn{
+		margin: 30px 0px 0px 85px;
+	}
+	.cus-images{
+		text-align: center;
 	}
 	.footer-after:after {
-		margin-left: 13px;
-		margin-right: 8px;
+	margin: 0px 10px;
+	}
+	.social-icons img{
+		margin: 0px 0px;
+	}
+	.cus-footer{
+		height: 260px;
+	}
+}
+@media only screen and (max-width: 500px) and (min-width: 400px){
+	.footer-after:after{
+		margin: 0px 10px;
 	}
 	.social-icons img{
 		margin: 0px;
 	}
-}
-@media only screen and (max-width:800px){
-	.banner-imgs{
-		display: none;
-	}
-	.cus-row h3{
-        font-size: 26px;
-    }
-	.images-div{
-		text-align: center;
-	}	
-	.main-banner{
-		height: auto;
-		text-align: center;
-	}
-	.container h1{
-		width: 100%;
-		text-align: center;
-	}
-	.load-btn{
-		margin-bottom: 20px;
-	}
-	.copyright{
-		width: 100%;
-		float: none;
-		display: inline-block;
-		margin-bottom: 20px;
-	} 
-	.social-icons{
-		display: inline-block;
-		width: 100%;
-		float: none;
-	}
-	.social-icons img{
-		padding: 0px 10px ;
-	}
-	.copyright-text{
-		margin-top: 30px;
-	}
-}
-@media only screen and (max-width:500px) {
-	.banner-imgs{
-		display: none;
-	}
-	.cus-row{
-		height: 1000px;
-	}
-	.layer-1{
-		width: 100%;
-	}
-	.images-div{
-		text-align: center;
-	}	
-	.main-banner{
-		height: auto;
-		text-align: center;
-	}
-	.container h1{
-		width: 100%;
-		text-align: center;
-	}
-	.load-btn{
-		margin-bottom: 20px;
-	}
-	.copyright{
-		width: 100%;
-		float: none;
-		display: inline-block;
-		margin-bottom: 20px;
-	} 
-	.social-icons{
-		display: inline-block;
-		width: 100%;
-		float: none;
-	}
-	.social-icons img{
-		padding: 0px 10px ;
-	}
-	.copyright-text{
-		margin-top: 30px;
-	}
-}
-@media only screen and (max-width:380px){
 	.cus-footer{
-		height: 320px;
-		padding-left: 0px;
-	}
-	.social-icons img{
-		padding-left: 0px;
-	}
-	.navbar-links li{
-		font-size: 13px;
-	}
-	.cus-row{
-		margin-bottom: 100px;
+		height: 270px;
 	}
 }
-@media only screen and (max-width:325px){
-	.navbar-links li{
-		font-size: 11px;
+
+@media only screen and (max-width: 400px) and (min-width: 320px){
+	.container h1{
+		font-size: 15px;
 	}
-	.social-icons img{
-		padding: 0px 3px;
-	}	
+	.load-btn{
+		margin-left: 50px;
+	}
+	.main-banner{
+		height: 180px;
+	}
 	.footer-after:after{
 		display: none;
 	}
-	.copyright li{
-		margin-right: 6px;
+	.copyright li a{
+		padding: 0px 1px;
 	}
-	.cus-row{
-		margin-bottom: 160px;
+	.social-icons img{
+		padding: 0px 0px;
+	} 
+	.cus-footer{
+		height: 280px;
 	}
 }
